unnecessery information has been removed

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                             <!--<a href="#" class="navigation__referenc">2 from 5</a>
                             <a href="#" class="navigation__referenc">3 from 5</a>
                             <a href="#" class="navigation__referenc">4 from 5</a>-->
-                            <a href="#" class="navigation__referenc my-pet">My pet</a>
+                            <a href="#" class="navigation__referenc my-pet">My projects</a>
                         </li>
                     </ul>
                 </nav>
@@ -45,17 +45,18 @@
                     </section>
                             <div class="section__skills">
                                 <h2 class="title-section2">Skills and Qualifications:</h2>
-                                <p>HTML, CSS/SCSS;</p>
-                                <p>Flex, Desktop first;</p>
-                                <p>JS/JQuery(basic)</p>
+                                <p>HTML, HTML5;</p>
+                                <p>CSS3, SCSS;</p>
+                                <p>Flex;</p>
+                                <p>JS, JQuery</p>
                                 <p>Bootstrap-4</p>
-                                <p>npm</p>
+                                <p>Node.js, npm</p>
                                 <p>Linux Bash</p>
-                                <p>Gulp, OptimizedHTML 5</p>
-                                <p>Foundation, HTML-letters;</p>
-                                <p>Figma, PhotoshopCC;</p>
+                                <p>Gulp-4, OptimizedHTML-5</p>
+                                <p>Foundation for Emails 2,(HTML-letters;)</p>
+                                <p>PhotoshopCC;</p>
+                                <p>Figma;</p>
                                 <p>AuxureRP-8</p>
-                                <p>I type text with the blind 10-finger method (Russian, Ukrainian, English);</p>
                                 <p>English: intermediate;</p>
                             </div>
 
@@ -85,16 +86,11 @@
                                 <col3>Course: IT Project management – 37,5h in Source iT;</col3>
                                 <col4>additional</col4>
                             </div>
-                            <div class="wrapper-col">
-                                <col1>2004 - 2006</col1>
-                                <col3>Specialty: manager-economist
-                                    Interregional Academy of Personnel Management;</col3>
-                                <col4>additional</col4>
-                            </div>
+                           
                             <div class="wrapper-col">
                                 <col1>1997 - 2002</col1>
-                                <col3>Specialty: process engineer.
-                                    Faculty: Industrial Pharmacy;
+                                <col3>Specialty: process engineer. <br>
+                                    Faculty: Industrial Pharmacy; <br>
                                     National University of Pharmacy;</col3>
                                 <col4>basic</col4>
                             </div>
