--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
                                 <p>HTML, HTML5;</p>
                                 <p>CSS3, SCSS;</p>
                                 <p>Flex;</p>
-                                <p>JS, JQuery</p>
-                                <p>Bootstrap-4</p>
-                                <p>Node.js, npm</p>
-                                <p>Linux Bash</p>
-                                <p>Gulp-4, OptimizedHTML-5</p>
+                                <p>JS, JQuery;</p>
+                                <p>Bootstrap-4;</p>
+                                <p>Node.js, npm;</p>
+                                <p>Linux Bash;</p>
+                                <p>Gulp-4, OptimizedHTML-5;</p>
                                 <p>Foundation for Emails 2,(HTML-letters;)</p>
                                 <p>PhotoshopCC;</p>
                                 <p>Figma;</p>
-                                <p>AuxureRP-8</p>
+                                <p>AuxureRP-8;</p>
                                 <p>English: intermediate;</p>
                             </div>
 
