--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <div class="wrapper-header">
+        <div class="wrapper-header pattern">
             <div class="container">
                 <nav class="navigation">
                     <ul class="navigation__list-ref">
@@ -30,7 +30,7 @@
         <div class="wrapper-page">
             <div class="container">
                 <div class="content">
-                    
+
                     <section class="narrow-window-text-show">
                        <h1 class="main-title">Koniukhov Igor</h1>
                         <h2 class="purpose">Purpose:</h2>
@@ -39,7 +39,7 @@
                     <section class="section__introduction">
                         <div class="section__wrapper-content">
                            <section class="wide-window-text-show">
-                       <h1 class="main-title">Koniukhov Igor</h1>
+                       <h2 class="main-title">Koniukhov Igor</h2>
                         <h2 class="purpose">Purpose:</h2>
                         <span>Trainee/Junior front-end developer</span>
                     </section>
@@ -53,8 +53,9 @@
                                 <p>Node.js, npm;</p>
                                 <p>Linux Bash;</p>
                                 <p>Gulp-4, OptimizedHTML-5;</p>
+                                <p>Jekyll;</p>
                                 <p>Foundation for Emails 2,(HTML-letters;)</p>
-                                <p>PhotoshopCC;</p>
+                                <p>PhotoshopCC, AdobeXD;</p>
                                 <p>Figma;</p>
                                 <p>AuxureRP-8;</p>
                                 <p>English: intermediate;</p>
@@ -64,11 +65,11 @@
                         <aside class="contact-info">
                             <img class="my-pic" src="images/my-pic.jpg" alt="">
                             <h2 class="contact-info__title">Contact info:</h2>
-                            <p class="contact-info__phone">Phone: <a href="tel: +380953357230">+38(095)3357230</a> </p>
+                            <p class="contact-info__phone">Phone: <a href="tel:+380953357230">+38(095)335-7230</a> </p>
                             <p class="contact-info__skype">Skype: <a href="skype:ikoniukhov?call">live:ikoniukhov</a> </p>
                             <p class="contact-info__telegramm">Telegramm: <a href="https://teleg.run/ikoniukhov">@ikoniukhov</a> </p>
-                            <p class="contact-info__email">Email: <a href="mailto: ikoniukhov@gmail.com">ikoniukhov@gmail.com</a> </p>
-                            <p class="contact-info__facebook"> <a href="https://www.facebook.com/ihor.koniukhov.1">facebook</a> </p>
+                            <p class="contact-info__email">Email: <a href="mailto:ikoniukhov@gmail.com">ikoniukhov@gmail.com</a> </p>
+                            <p class="contact-info__facebook facebook-litera"> <a href="https://www.facebook.com/ihor.koniukhov.1">facebook</a> </p>
                         </aside>
 
                     </section>
@@ -77,22 +78,22 @@
                         <div class="section__education">
                             <h2 class="section__title">Education</h2>
                             <div class="wrapper-col">
-                                <col1>2020</col1>
-                                <col3>Course online in FructCode: HTML, CSS, JS(basic), JQuery(basic)</col3>
-                                <col4>additional</col4>
+                                <div class="col1">2020</div>
+                                <div class="col3">Course online in FructCode: HTML, CSS, JS(basic), JQuery(basic)</div>
+                                <div class="col4">additional</div>
                             </div>
                             <div class="wrapper-col">
-                                <col1>2019</col1>
-                                <col3>Course: IT Project management – 37,5h in Source iT;</col3>
-                                <col4>additional</col4>
+                                <div class="col1">2019</div>
+                                <div class="col3">Course: IT Project management – 37,5h in Source iT;</div>
+                                <div class="col4">additional</div>
                             </div>
-                           
+
                             <div class="wrapper-col">
-                                <col1>1997 - 2002</col1>
-                                <col3>Specialty: process engineer. <br>
+                                <div class="col1">1997 - 2002</div>
+                                <div class="col3">Specialty: process engineer. <br>
                                     Faculty: Industrial Pharmacy; <br>
-                                    National University of Pharmacy;</col3>
-                                <col4>basic</col4>
+                                    National University of Pharmacy;</div>
+                                <div class="col4">basic</div>
                             </div>
                         </div>
                     </section>
@@ -100,11 +101,11 @@
             </div>
         </div>
     </main>
-    <footer>
+    <footer class="pattern">
 
-        <div class="container direction-row">
-            <h3 class="footer__titel">Get more information:</h3>
-            <a class="certificates" href="https://drive.google.com/drive/folders/1OGI6SoJmnsEveDMpYoN4tCYptqZ4nPq9?usp=sharing">Certificates</a>
+        <div class="container direction-row ">
+            <h3 class="footer__title">Get more information:</h3>
+            <a class="certificates" href="https://drive.google.com/drive/folders/1OGI6SoJmnsEveDMpYoN4tCYptqZ4nPq9?usp=sharing" title="мои сертификаты">Certificates</a>
         </div>
 
     </footer>
