was added reference on my first site

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                             <!--<a href="#" class="navigation__referenc">2 from 5</a>
                             <a href="#" class="navigation__referenc">3 from 5</a>
                             <a href="#" class="navigation__referenc">4 from 5</a>-->
-                            <a href="#" class="navigation__referenc my-pet">My projects</a>
+                            <a href="https://kvinerdji.com.ua/index.html" class="navigation__referenc my-pet">My projects</a>
                         </li>
                     </ul>
                 </nav>
