--- a/index.html
+++ b/index.html
@@ -2,111 +2,146 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes">
-    <title>CV Koniukhov Igor</title>
-    <link rel="stylesheet" href="css/style.css">
+	<meta charset="UTF-8">
+	<meta content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes" name="viewport">
+	<title>CV Koniukhov Igor</title>
+	<link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <header>
-        <div class="wrapper-header pattern">
-            <div class="container">
-                <nav class="navigation">
-                    <ul class="navigation__list-ref">
-                        <li class="wrapper-reference git-image">
-                            <a href="https://github.com/Igor-Koniukhov" class="navigation__referenc git-text">My Github Repositories </a>
-                            <!--<a href="#" class="navigation__referenc">2 from 5</a>
-                            <a href="#" class="navigation__referenc">3 from 5</a>
-                            <a href="#" class="navigation__referenc">4 from 5</a>-->
-                            <a href="https://bajdaker.com.ua/" class="navigation__referenc my-pet">My projects</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    </header>
-    <main class="main">
-        <div class="wrapper-page">
-            <div class="container">
-                <div class="content">
+<header>
+	<div class="wrapper-header pattern">
+		<div class="container">
+			<div class="row col-sm-6">
+				<div class="img-wrapper">
+					<img alt="my picture" class="my-pic" src="images/my-pic3.jpg">
+				</div>
+				<div class="row col-md-6">
+					<div class="wrapper-nav">
+						<h1 class="main-title">Koniukhov Igor</h1>
+						<nav class="navigation ">
+							<ul class="navigation__list-ref">
+								<li class="wrapper-reference ">
+									<a class="navigation__reference git-text active" href="index.html">skills</a>
+								</li>
+								<li class="wrapper-reference "><a class="navigation__reference nav-text " href="past_exp.html">work
+								                                                                                  experience</a>
+								</li>
+								<li class="wrapper-reference dropdown ">
+									<div class="dropdown-title ">projects</div>
+									<div class="dropdown-menu">
+										<a class="dropdown-items" href="https://kvinerdji.com.ua">kvinerdji.com.ua</a>
+										<a class="dropdown-items" href="https://bajdaker.com.ua">bajdaker.com.ua</a>
+										<a class="dropdown-items"
+												href="https://github.com/Igor-Koniukhov">GitRepository</a>
+									</div>
+								</li>
+								<li class="navigation__reference "><a class="navigation__reference nav-text" href="#">Video
+								                                                                                     CV</a>
+								</li>
+							</ul>
+						</nav>
+					</div>
+					<div class="contact-info">
+						<p class="contact-info__phone">Phone: <a href="tel:+380953357230">+38(095)335-7230</a></p>
+						<p class="contact-info__skype">Skype: <a href="skype:ikoniukhov?call">live:ikoniukhov</a></p>
+						<p class="contact-info__telegramm">Telegramm: <a
+								href="https://teleg.run/ikoniukhov">@ikoniukhov</a></p>
+						<p class="contact-info__email">Email: <a
+								href="mailto:ikoniukhov@gmail.com">ikoniukhov@gmail.com</a></p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</header>
+<main class="main">
+	<div class="wrapper-page">
+		<div class="container">
+			<div class="content">
+				<h2 class="purpose">Purpose:</h2>
+				<span>Trainee/Junior front-end developer</span>
 
-                    <section class="narrow-window-text-show">
-                       <h1 class="main-title">Koniukhov Igor</h1>
-                        <h2 class="purpose">Purpose:</h2>
-                        <span>Trainee/Junior front-end developer</span>
-                    </section>
-                    <section class="section__introduction">
-                        <div class="section__wrapper-content">
-                           <section class="wide-window-text-show">
-                       <h2 class="main-title">Koniukhov Igor</h2>
-                        <h2 class="purpose">Purpose:</h2>
-                        <span>Trainee/Junior front-end developer</span>
-                    </section>
-                            <div class="section__skills">
-                                <h2 class="title-section2">Skills and Qualifications:</h2>
-                                <p>HTML, HTML5;</p>
-                                <p>CSS3, SCSS;</p>
-                                <p>Flex;</p>
-                                <p>JS, JQuery;</p>
-                                <p>Bootstrap-4;</p>
-                                <p>Node.js, npm;</p>
-                                <p>Linux Bash;</p>
-                                <p>Gulp-4, OptimizedHTML-5;</p>
-                                <p>Jekyll;</p>
-                                <p>Foundation for Emails 2,(HTML-letters;)</p>
-                                <p>PhotoshopCC, AdobeXD;</p>
-                                <p>Figma;</p>
-                                <p>AuxureRP-8;</p>
-                                <p>English: intermediate;</p>
-                            </div>
+				<section class="section__introduction">
+					<div class="section__wrapper-content">
+						<h2 class="title-section2">Skills and Qualifications:</h2>
+						<div class="row col-sm-6">
+							<div class="section__skills">
+								<h3 class="underline">Hard skills</h3>
+								<p>HTML, HTML5;</p>
+								<p>CSS3, SCSS;</p>
+								<p>Flex;</p>
+								<p>JS, JQuery;</p>
+								<p>Bootstrap-4;</p>
+								<p>Node.js, npm;</p>
+								<p>Linux Bash;</p>
+								<p>Gulp-4, OptimizedHTML-5;</p>
+								<p>Jekyll;</p>
+								<p>Foundation for Emails 2,(HTML-letters;)</p>
+								<p>PhotoshopCC, AdobeXD;</p>
+								<p>Figma;</p>
+								<p>AuxureRP-8;</p>
+								<p>English: intermediate;</p>
+							</div>
+							<div class="section__skills ml-auto">
+								<h3 class="underline">Soft skills</h3>
+								<p>Good communication skills;</p>
+								<p>Open-mindedness</p>
+								<p>Teamwork;</p>
+								<p>Creativity;</p>
+								<p>Adaptability;</p>
+								<p>Willingness to learn;</p>
+								<p>Empathy;</p>
+								<p>Integrity;</p>
+								<p>Work ethic;</p>
+								<p>Research;</p>
+							</div>
+						</div>
 
-                        </div>
-                        <aside class="contact-info">
-                            <img class="my-pic" src="images/my-pic.jpg" alt="">
-                            <h2 class="contact-info__title">Contact info:</h2>
-                            <p class="contact-info__phone">Phone: <a href="tel:+380953357230">+38(095)335-7230</a> </p>
-                            <p class="contact-info__skype">Skype: <a href="skype:ikoniukhov?call">live:ikoniukhov</a> </p>
-                            <p class="contact-info__telegramm">Telegramm: <a href="https://teleg.run/ikoniukhov">@ikoniukhov</a> </p>
-                            <p class="contact-info__email">Email: <a href="mailto:ikoniukhov@gmail.com">ikoniukhov@gmail.com</a> </p>
-                            <p class="contact-info__facebook facebook-litera"> <a href="https://www.facebook.com/ihor.koniukhov.1">facebook</a> </p>
-                        </aside>
 
-                    </section>
+					</div>
 
-                    <section>
-                        <div class="section__education">
-                            <h2 class="section__title">Education</h2>
-                            <div class="wrapper-col">
-                                <div class="col1">2020</div>
-                                <div class="col3">Course online in FructCode: HTML, CSS, JS(basic), JQuery(basic)</div>
-                                <div class="col4">additional</div>
-                            </div>
-                            <div class="wrapper-col">
-                                <div class="col1">2019</div>
-                                <div class="col3">Course: IT Project management – 37,5h in Source iT;</div>
-                                <div class="col4">additional</div>
-                            </div>
 
-                            <div class="wrapper-col">
-                                <div class="col1">1997 - 2002</div>
-                                <div class="col3">Specialty: process engineer. <br>
-                                    Faculty: Industrial Pharmacy; <br>
-                                    National University of Pharmacy;</div>
-                                <div class="col4">basic</div>
-                            </div>
-                        </div>
-                    </section>
-                </div>
-            </div>
-        </div>
-    </main>
-    <footer class="pattern">
+				</section>
 
-        <div class="container direction-row ">
-            <h3 class="footer__title">Get more information:</h3>
-            <a class="certificates" href="https://drive.google.com/drive/folders/1OGI6SoJmnsEveDMpYoN4tCYptqZ4nPq9?usp=sharing" title="мои сертификаты">Certificates</a>
-        </div>
+				<section>
+					<div class="section__education">
+						<h2 class="section__title">Education</h2>
+						<div class="wrapper-col">
+							<div class="col1">2020</div>
+							<div class="col3">Course online in FructCode: HTML, CSS, JS(basic), JQuery(basic)</div>
+							<div class="col4">additional</div>
+						</div>
+						<div class="wrapper-col">
+							<div class="col1">2019</div>
+							<div class="col3">Course: IT Project management – 37,5h in Source iT;</div>
+							<div class="col4">additional</div>
+						</div>
 
-    </footer>
-</body></html>
+						<div class="wrapper-col">
+							<div class="col1">1997 - 2002</div>
+							<div class="col3">Specialty: process engineer. <br>
+							                  Faculty: Industrial Pharmacy; <br>
+							                  National University of Pharmacy;
+							</div>
+							<div class="col4">basic</div>
+						</div>
+					</div>
+				</section>
+			</div>
+		</div>
+	</div>
+</main>
+<footer class="pattern">
+
+	<div class="container direction-row ">
+		<h3 class="footer__title">Get more information:</h3>
+		<a class="certificates"
+				href="https://drive.google.com/drive/folders/1OGI6SoJmnsEveDMpYoN4tCYptqZ4nPq9?usp=sharing"
+				title="мои сертификаты">Certificates</a>
+	</div>
+
+</footer>
+<script src="script.js"></script>
+</body>
+</html>
