Were fixed typos and discrepancy

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 									<a class="navigation__reference git-text active" href="index.html">skills</a>
 								</li>
 								<li class="wrapper-reference "><a class="navigation__reference nav-text " href="past_exp.html">work
-								                                                                                  experience</a>
+								                                                                                                     experience</a>
 								</li>
 								<li class="wrapper-reference dropdown ">
 									<div class="dropdown-title ">projects</div>
@@ -36,8 +36,7 @@
 												href="https://github.com/Igor-Koniukhov">GitRepository</a>
 									</div>
 								</li>
-								<li class="navigation__reference "><a class="navigation__reference nav-text" href="#">Video
-								                                                                                     CV</a>
+								<li class="wrapper-reference "><a class="navigation__reference nav-text" href="#">Video CV</a>
 								</li>
 							</ul>
 						</nav>
@@ -65,9 +64,9 @@
 				<section class="section__introduction">
 					<div class="section__wrapper-content">
 						<h2 class="title-section2">Skills and Qualifications:</h2>
-						<div class="row col-sm-6">
+						<div class="row ">
 							<div class="section__skills">
-								<h3 class="underline">Hard skills</h3>
+								<h3 class="underline">Hard skills:</h3>
 								<p>HTML, HTML5;</p>
 								<p>CSS3, SCSS;</p>
 								<p>Flex;</p>
@@ -77,16 +76,16 @@
 								<p>Linux Bash;</p>
 								<p>Gulp-4, OptimizedHTML-5;</p>
 								<p>Jekyll;</p>
-								<p>Foundation for Emails 2,(HTML-letters;)</p>
+								<p>Foundation for Emails 2;</p>
 								<p>PhotoshopCC, AdobeXD;</p>
 								<p>Figma;</p>
 								<p>AuxureRP-8;</p>
 								<p>English: intermediate;</p>
 							</div>
-							<div class="section__skills ml-auto">
-								<h3 class="underline">Soft skills</h3>
+							<div class="section__skills ml-auto pl10">
+								<h3 class="underline">Soft skills:</h3>
 								<p>Good communication skills;</p>
-								<p>Open-mindedness</p>
+								<p>Open-mindedness;</p>
 								<p>Teamwork;</p>
 								<p>Creativity;</p>
 								<p>Adaptability;</p>
