--- a/past_exp.html
+++ b/past_exp.html
@@ -36,7 +36,7 @@
 												href="https://github.com/Igor-Koniukhov">GitRepository</a>
 									</div>
 								</li>
-								<li class="navigation__reference "><a class="navigation__reference nav-text" href="#">Video
+								<li class="wrapper-reference "><a class="navigation__reference nav-text" href="#">Video
 								                                                                                      CV</a>
 								</li>
 							</ul>
