--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 				<section class="section__introduction">
 					<div class="section__wrapper-content">
-						<h2 class="title-section2">Skills and Qualifications:</h2>
+						<h2 class="title-section2">Skills and Qualifications</h2>
 						<div class="row ">
 							<div class="section__skills">
 								<h3 class="underline">Hard skills:</h3>
