was added new skill in the listof skills - WordPress

--- a/past_exp.html
+++ b/past_exp.html
@@ -36,9 +36,8 @@
 												href="https://github.com/Igor-Koniukhov">GitRepository</a>
 									</div>
 								</li>
-								<li class="wrapper-reference "><a class="navigation__reference nav-text" href="#">Video
-								                                                                                      CV</a>
-								</li>
+								<!--<li class="wrapper-reference "><a class="navigation__reference nav-text" href="#">Video CV</a>
+								</li>-->
 							</ul>
 						</nav>
 					</div>
