--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="UTF-8">
 	<meta content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes" name="viewport">
 	<title>CV Koniukhov Igor</title>
 	<link href="css/style.css" rel="stylesheet">
 </head>
-
 <body>
 <header>
 	<div class="wrapper-header pattern">
@@ -36,8 +34,8 @@
 												href="https://github.com/Igor-Koniukhov">GitRepository</a>
 									</div>
 								</li>
-								<li class="wrapper-reference "><a class="navigation__reference nav-text" href="#">Video CV</a>
-								</li>
+								<!--<li class="wrapper-reference "><a class="navigation__reference nav-text" href="#">Video CV</a>
+								</li>-->
 							</ul>
 						</nav>
 					</div>
@@ -60,7 +58,6 @@
 			<div class="content">
 				<h2 class="purpose">Purpose:</h2>
 				<span>Trainee/Junior front-end developer</span>
-
 				<section class="section__introduction">
 					<div class="section__wrapper-content">
 						<h2 class="title-section2">Skills and Qualifications</h2>
@@ -71,6 +68,7 @@
 								<p>CSS3, SCSS;</p>
 								<p>Flex;</p>
 								<p>JS, JQuery;</p>
+								<p>WordPress;</p>
 								<p>Bootstrap-4;</p>
 								<p>Node.js, npm;</p>
 								<p>Linux Bash;</p>
@@ -85,7 +83,7 @@
 							<div class="section__skills ml-auto pl10">
 								<h3 class="underline">Soft skills:</h3>
 								<p>Good communication skills;</p>
-								<p>Open-mindedness;</p>
+								<p>Open-minded;</p>
 								<p>Teamwork;</p>
 								<p>Creativity;</p>
 								<p>Adaptability;</p>
@@ -96,13 +94,8 @@
 								<p>Research;</p>
 							</div>
 						</div>
-
-
 					</div>
-
-
 				</section>
-
 				<section>
 					<div class="section__education">
 						<h2 class="section__title">Education</h2>
@@ -116,7 +109,6 @@
 							<div class="col3">Course: IT Project management – 37,5h in Source iT;</div>
 							<div class="col4">additional</div>
 						</div>
-
 						<div class="wrapper-col">
 							<div class="col1">1997 - 2002</div>
 							<div class="col3">Specialty: process engineer. <br>
@@ -132,14 +124,12 @@
 	</div>
 </main>
 <footer class="pattern">
-
 	<div class="container direction-row ">
 		<h3 class="footer__title">Get more information:</h3>
 		<a class="certificates"
 				href="https://drive.google.com/drive/folders/1OGI6SoJmnsEveDMpYoN4tCYptqZ4nPq9?usp=sharing"
 				title="мои сертификаты">Certificates</a>
 	</div>
-
 </footer>
 <script src="script.js"></script>
 </body>
