was added ref on new project

--- a/past_exp.html
+++ b/past_exp.html
@@ -33,11 +33,12 @@
 										<a class="dropdown-items" href="https://kvinerdji.com.ua">kvinerdji.com.ua</a>
 										<a class="dropdown-items" href="https://bajdaker.com.ua">bajdaker.com.ua</a>
 										<a class="dropdown-items"
-												href="https://github.com/Igor-Koniukhov">GitRepository</a>
+												href="https://kvinerdji-shope.top">kvinerdji-shope.top</a>
 									</div>
 								</li>
-								<!--<li class="wrapper-reference "><a class="navigation__reference nav-text" href="#">Video CV</a>
-								</li>-->
+								<li class="wrapper-reference "><a class="dropdown-items"
+										href="https://github.com/Igor-Koniukhov">GitRepository</a>
+								</li>
 							</ul>
 						</nav>
 					</div>
