--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 									<div class="dropdown-menu">
 										<a class="dropdown-items" href="https://kvinerdji.com.ua">kvinerdji.com.ua</a>
 										<a class="dropdown-items" href="https://bajdaker.com.ua">bajdaker.com.ua</a>
-										<a class="dropdown-items"
-												href="https://github.com/Igor-Koniukhov">GitRepository</a>
+										<a class="dropdown-items" href="https://kvinerdji-shope.top">kvinerdji-shope.top</a>
 									</div>
 								</li>
-								<!--<li class="wrapper-reference "><a class="navigation__reference nav-text" href="#">Video CV</a>
-								</li>-->
+								<li class="wrapper-reference "><a class="dropdown-items"
+										href="https://github.com/Igor-Koniukhov">GitRepository</a>
+								</li>
 							</ul>
 						</nav>
 					</div>
