--- a/past_exp.html
+++ b/past_exp.html
@@ -36,7 +36,7 @@
 												href="https://kvinerdji-shope.top">kvinerdji-shope.top</a>
 									</div>
 								</li>
-								<li class="wrapper-reference "><a class="dropdown-items"
+								<li class="wrapper-reference "><a class="dropdown-items git-text"
 										href="https://github.com/Igor-Koniukhov">GitRepository</a>
 								</li>
 							</ul>
