--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 										<a class="dropdown-items" href="https://kvinerdji-shope.top">kvinerdji-shope.top</a>
 									</div>
 								</li>
-								<li class="wrapper-reference "><a class="dropdown-items"
+								<li class="wrapper-reference "><a class="dropdown-items git-text"
 										href="https://github.com/Igor-Koniukhov">GitRepository</a>
 								</li>
 							</ul>
