training profect was added

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 										<a class="dropdown-items" href="https://kvinerdji.com.ua">kvinerdji.com.ua</a>
 										<a class="dropdown-items" href="https://bajdaker.com.ua">bajdaker.com.ua</a>
 										<a class="dropdown-items" href="https://kvinerdji-shope.top">kvinerdji-shope.top</a>
+										<a class="dropdown-items" href="https://igor-koniukhov.github.io/career/index.html">training project</a>
 									</div>
 								</li>
 								<li class="wrapper-reference "><a class="dropdown-items git-text"
