Was modified content

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<meta charset="UTF-8">
 	<meta content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes" name="viewport">
 	<title>CV Koniukhov Igor</title>
+	<link href="https://fonts.gstatic.com" rel="preconnect">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+			rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
 </head>
 <body>
@@ -22,16 +25,18 @@
 								<li class="wrapper-reference ">
 									<a class="navigation__reference git-text active" href="index.html">skills</a>
 								</li>
-								<li class="wrapper-reference "><a class="navigation__reference nav-text " href="past_exp.html">work
-								                                                                                                     experience</a>
+								<li class="wrapper-reference "><a class="navigation__reference nav-text "
+										href="past_exp.html">work
+								                             experience</a>
 								</li>
 								<li class="wrapper-reference dropdown ">
 									<div class="dropdown-title ">projects</div>
 									<div class="dropdown-menu">
 										<a class="dropdown-items" href="https://kvinerdji.com.ua">kvinerdji.com.ua</a>
 										<a class="dropdown-items" href="https://bajdaker.com.ua">bajdaker.com.ua</a>
-										<a class="dropdown-items" href="https://kvinerdji-shope.top">kvinerdji-shope.top</a>
-										<a class="dropdown-items" href="https://igor-koniukhov.github.io/career/index.html">training project</a>
+										<a class="dropdown-items"
+												href="https://kvinerdji-shope.top">Kvinerdji shop</a>
+
 									</div>
 								</li>
 								<li class="wrapper-reference "><a class="dropdown-items git-text"
@@ -58,66 +63,52 @@
 		<div class="container">
 			<div class="content">
 				<h2 class="purpose">Purpose:</h2>
-				<span>Trainee/Junior front-end developer</span>
-				<section class="section__introduction">
+				<p class="mb-2"><b class="color-b">Trainee/Junior front-end developer</b></p>
+				<section class="section__introduction mb-2">
 					<div class="section__wrapper-content">
 						<h2 class="title-section2">Skills and Qualifications</h2>
-						<div class="row ">
-							<div class="section__skills">
-								<h3 class="underline">Hard skills:</h3>
-								<p>HTML, HTML5;</p>
-								<p>CSS3, SCSS;</p>
-								<p>Flex;</p>
-								<p>JS, JQuery;</p>
-								<p>WordPress;</p>
-								<p>Bootstrap-4;</p>
-								<p>Node.js, npm;</p>
-								<p>Linux Bash;</p>
-								<p>Gulp-4, OptimizedHTML-5;</p>
-								<p>Jekyll;</p>
-								<p>Foundation for Emails 2;</p>
-								<p>PhotoshopCC, AdobeXD;</p>
-								<p>Figma;</p>
-								<p>AuxureRP-8;</p>
-								<p>English: intermediate;</p>
-							</div>
-							<div class="section__skills ml-auto pl10">
-								<h3 class="underline">Soft skills:</h3>
-								<p>Good communication skills;</p>
-								<p>Open-minded;</p>
-								<p>Teamwork;</p>
-								<p>Creativity;</p>
-								<p>Adaptability;</p>
-								<p>Willingness to learn;</p>
-								<p>Empathy;</p>
-								<p>Integrity;</p>
-								<p>Work ethic;</p>
-								<p>Research;</p>
-							</div>
-						</div>
+						<h3>Summary</h3>
+						<p>I am a result and goal oriented person, who obtained good knowledge and experience in HTML,CSS coding and JS programming. I am well familiar with such technologies/frameworks as JS, JQuery, Bootstrap-3, Bootstrap-4, Foundation for Emails 2, WordPress. My main goal is the professional growth in Web-development. </p>
+						<h3 class="mb-1 mt-1">Skills</h3>
+						<p><b class="color-b">English:</b> Intermediate level (strong B1).</p>
+						<p><b class="color-b">Languages:</b>  HTML/HTML5, CSS3/flexbox, JS.</p>
+						<p><b class="color-b">Preprocessors:</b> SCSS, SASS.</p>
+						<p><b class="color-b">Task runner:</b> Gulp-4.</p>
+						<p><b class="color-b">CMS:</b> WordPress.</p>
+						<p><b class="color-b">Libraries/Frameworks:</b> JQuery, Bootstrap-3, Bootstrap-4, Foundation.</p>
+						<p><b class="color-b">Graphics software:</b> PhotoshopCC, Figma, AdobeXD, AuxureRP-8.</p>
+						<p><b class="color-b">Operating systems:</b> Windows, Linux (WSL - Linux Bash).</p>
+						<p><b class="color-b">Tools:</b> WebStorm, Visual Studio, Brackets.</p>
+						<p><b class="color-b">Version control tools:</b> Git, Github.</p>
 					</div>
+				</section>
+				<section class="work-experience mb-2">
+					<h3 class="mb-1 mt-1">Work experience</h3>
+					<p>LTD"Charly"/"Kvinerdji".</p>
+					<p>Content-manager, Web-developer.</p>
+					<p>September 2019 - present.</p>
+				</section>
+				<section class="portfolio mb-2">
+					<h3 class="mb-1 mt-1">Portfolio</h3>
+					<p><a class="color-b" href="https://kvinerdji.com.ua">kvinerdji.com.ua</a> - info-site for "Kvinerdji".</p>
+					<p>Technologies: HTML5,CSS3,Bootstrap-4, js/jquery, Jekyll.</p>
+
+					<p><a class="color-b" href="https://kvinerdji-shope.top">Kvinerdji shop</a> - internet shop for "Kvinerdji".</p>
+					<p>Technologies: WordPress, Elementor.</p>
+					<br>
+					<p><a class="color-b" href="https://bajdaker.com.ua">bajdaker.com.ua</a> - my pet project about canoe, bike's and trips.</p>
+					<p>Technologies: HTML5,CSS3,Bootstrap-4, js/jquery, Jekyll.</p>
 				</section>
 				<section>
 					<div class="section__education">
 						<h2 class="section__title">Education</h2>
-						<div class="wrapper-col">
-							<div class="col1">2020</div>
-							<div class="col3">Course online in FructCode: HTML, CSS, JS(basic), JQuery(basic)</div>
-							<div class="col4">additional</div>
-						</div>
-						<div class="wrapper-col">
-							<div class="col1">2019</div>
-							<div class="col3">Course: IT Project management – 37,5h in Source iT;</div>
-							<div class="col4">additional</div>
-						</div>
-						<div class="wrapper-col">
-							<div class="col1">1997 - 2002</div>
-							<div class="col3">Specialty: process engineer. <br>
-							                  Faculty: Industrial Pharmacy; <br>
-							                  National University of Pharmacy;
-							</div>
-							<div class="col4">basic</div>
-						</div>
+						<p>Course online in FructCode: HTML, CSS, JS(basic), JQuery(basic).<a 				href="https://drive.google.com/drive/folders/1OGI6SoJmnsEveDMpYoN4tCYptqZ4nPq9?usp=sharing"
+								title="мои сертификаты">Click</a></p>
+						<p>Course: IT Project management – 37,5h in Source iT.</p>
+							<p>Specialty: process engineer. <br>
+							                  Faculty: Industrial Pharmacy. <br>
+							                  National University of Pharmacy.
+							</p>
 					</div>
 				</section>
 			</div>
