--- a/past_exp.html
+++ b/past_exp.html
@@ -5,6 +5,8 @@
 	<meta charset="UTF-8">
 	<meta content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes" name="viewport">
 	<title>CV Koniukhov Igor</title>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
 </head>
 
@@ -61,15 +63,7 @@
 			<div class="content">
 				<section>
 					<div class="section__wrapper-content">
-						<div class="section__experience p15">
-							<h2 class="underline">About IT background.</h2>
-							<p>My experience in web development boils down in study by myself this direction and apply these skills in practice. I moved from theory to practice and now I can say that it has become my hobby.</p>
-							<p> Now I realize, that I'm getting enjoyment from applying on practice my skills and now I have several training projects and two working sites. You can find the list of my achievements in the skills-tab and my work project references in the projects-tab.</p>
 
-							<p>My goal at this moment - developing and improving my skills in real projects as a developer. My plane after two years of intensive working became a strong middle specialist.</p>
-							<p>So I aimed at your proposition and I hope your company gets me on board with a chance to prove my aspirations.</p>
-							<p>I'm a highly motivated switcher who inspiring by his hobby, with logical thinking, with a wide knowledge of vision who dreaming his hobby will become a job.</p>
-						</div>
 						<div class="section__experience">
 
 							<div class="section__experience p15">
@@ -163,36 +157,6 @@
 						</div>
 
 
-					</div>
-					<aside class="contact-info">
-
-
-					</aside>
-
-				</section>
-
-				<section>
-					<div class="section__education">
-						<h2 class="section__title">Education</h2>
-						<div class="wrapper-col">
-							<div class="col1">2020</div>
-							<div class="col3">Course online in FructCode: HTML, CSS, JS(basic), JQuery(basic)</div>
-							<div class="col4">additional</div>
-						</div>
-						<div class="wrapper-col">
-							<div class="col1">2019</div>
-							<div class="col3">Course: IT Project management – 37,5h in Source iT;</div>
-							<div class="col4">additional</div>
-						</div>
-
-						<div class="wrapper-col">
-							<div class="col1">1997 - 2002</div>
-							<div class="col3">Specialty: process engineer. <br>
-							                  Faculty: Industrial Pharmacy; <br>
-							                  National University of Pharmacy;
-							</div>
-							<div class="col4">basic</div>
-						</div>
 					</div>
 				</section>
 			</div>
