--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes" name="viewport">
-	<title>CV Koniukhov Igor</title>
+	<title>CV Igor Koniukhov</title>
 	<link href="https://fonts.gstatic.com" rel="preconnect">
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
 			rel="stylesheet">
@@ -19,7 +19,7 @@
 				</div>
 				<div class="row col-md-6">
 					<div class="wrapper-nav">
-						<h1 class="main-title">Koniukhov Igor</h1>
+						<h1 class="main-title">Igor Koniukhov</h1>
 						<nav class="navigation ">
 							<ul class="navigation__list-ref">
 								<li class="wrapper-reference ">
@@ -47,7 +47,7 @@
 					</div>
 					<div class="contact-info">
 						<p class="contact-info__phone">Phone: <a href="tel:+380953357230">+38(095)335-7230</a></p>
-						<p class="contact-info__skype">Skype: <a href="skype:ikoniukhov?call">live:ikoniukhov</a></p>
+						<p class="contact-info__skype">Skype: <a href="skype:ikoniukhov?call">ikoniukhov</a></p>
 						<p class="contact-info__telegramm">Telegramm: <a
 								href="https://teleg.run/ikoniukhov">@ikoniukhov</a></p>
 						<p class="contact-info__email">Email: <a
@@ -91,13 +91,13 @@
 				<section class="portfolio mb-2">
 					<h3 class="mb-1 mt-1">Portfolio</h3>
 					<p><a class="color-b" href="https://kvinerdji.com.ua">kvinerdji.com.ua</a> - info-site for "Kvinerdji".</p>
-					<p>Technologies: HTML5,CSS3,Bootstrap-4, js/jquery, Jekyll.</p>
+					<p>Technologies: HTML5, CSS3, Bootstrap-4, js/jquery, Jekyll.</p>
 
 					<p><a class="color-b" href="https://kvinerdji-shope.top">Kvinerdji shop</a> - internet shop for "Kvinerdji".</p>
 					<p>Technologies: WordPress, Elementor.</p>
 					<br>
 					<p><a class="color-b" href="https://bajdaker.com.ua">bajdaker.com.ua</a> - my pet project about canoe, bike's and trips.</p>
-					<p>Technologies: HTML5,CSS3,Bootstrap-4, js/jquery, Jekyll.</p>
+					<p>Technologies: HTML5, CSS3, Bootstrap-4, js/jquery, Jekyll.</p>
 				</section>
 				<section>
 					<div class="section__education">
