--- a/past_exp.html
+++ b/past_exp.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes" name="viewport">
-	<title>CV Koniukhov Igor</title>
+	<title>CV Igor Koniukhov</title>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
@@ -20,7 +20,7 @@
 				</div>
 				<div class="row col-md-6">
 					<div class="wrapper-nav">
-						<h1 class="main-title">Koniukhov Igor</h1>
+						<h1 class="main-title">Igor Koniukhov</h1>
 						<nav class="navigation ">
 							<ul class="navigation__list-ref">
 								<li class="wrapper-reference ">
@@ -35,7 +35,7 @@
 										<a class="dropdown-items" href="https://kvinerdji.com.ua">kvinerdji.com.ua</a>
 										<a class="dropdown-items" href="https://bajdaker.com.ua">bajdaker.com.ua</a>
 										<a class="dropdown-items"
-												href="https://kvinerdji-shope.top">kvinerdji-shope.top</a>
+												href="https://kvinerdji-shope.top">Kvinerdji shop</a>
 									</div>
 								</li>
 								<li class="wrapper-reference "><a class="dropdown-items git-text"
@@ -46,9 +46,8 @@
 					</div>
 					<div class="contact-info">
 						<p class="contact-info__phone">Phone: <a href="tel:+380953357230">+38(095)335-7230</a></p>
-						<p class="contact-info__skype">Skype: <a href="skype:ikoniukhov?call">live:ikoniukhov</a></p>
-						<p class="contact-info__telegramm">Telegramm: <a
-								href="https://teleg.run/ikoniukhov">@ikoniukhov</a></p>
+						<p class="contact-info__skype">Skype: <a href="skype:ikoniukhov?call">ikoniukhov</a></p>
+						<p class="contact-info__telegramm">Telegramm: <a href="https://teleg.run/ikoniukhov">@ikoniukhov</a></p>
 						<p class="contact-info__email">Email: <a
 								href="mailto:ikoniukhov@gmail.com">ikoniukhov@gmail.com</a></p>
 					</div>
