skills set modified

--- a/index.html
+++ b/index.html
@@ -71,21 +71,21 @@
 						<p>I am a result and goal oriented person, who obtained good knowledge and experience in HTML,CSS coding and JS programming. I am well familiar with such technologies/frameworks as JS, JQuery, Bootstrap-3, Bootstrap-4, Foundation for Emails 2, WordPress. My main goal is the professional growth in Web-development. </p>
 						<h3 class="mb-1 mt-1">Skills</h3>
 						<p><b class="color-b">English:</b> Intermediate level (strong B1).</p>
-						<p><b class="color-b">Languages:</b>  HTML/HTML5, CSS3/flexbox, JS.</p>
+						<p><b class="color-b">Languages:</b>  HTML/HTML5, CSS3/flexbox, JS, Go</p>
 						<p><b class="color-b">Preprocessors:</b> SCSS, SASS.</p>
 						<p><b class="color-b">Task runner:</b> Gulp-4.</p>
 						<p><b class="color-b">CMS:</b> WordPress.</p>
 						<p><b class="color-b">Libraries/Frameworks:</b> JQuery, Bootstrap-3, Bootstrap-4, Foundation.</p>
 						<p><b class="color-b">Graphics software:</b> PhotoshopCC, Figma, AdobeXD, AuxureRP-8.</p>
 						<p><b class="color-b">Operating systems:</b> Windows, Linux (WSL - Linux Bash).</p>
-						<p><b class="color-b">Tools:</b> WebStorm, Visual Studio, Brackets.</p>
+						<p><b class="color-b">Tools:</b> WebStorm, Goland, Visual Studio, Brackets.</p>
 						<p><b class="color-b">Version control tools:</b> Git, Github.</p>
 					</div>
 				</section>
 				<section class="work-experience mb-2">
 					<h3 class="mb-1 mt-1">Work experience</h3>
 					<p>LTD"Charly"/"Kvinerdji".</p>
-					<p>Content-manager, Web-developer.</p>
+					<p>Content-manager</p>
 					<p>September 2019 - present.</p>
 				</section>
 				<section class="portfolio mb-2">
