--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						<p>I am a result and goal oriented person, who obtained good knowledge and experience in HTML,CSS coding and JS programming. I am well familiar with such technologies/frameworks as JS, JQuery, Bootstrap-3, Bootstrap-4, Foundation for Emails 2, WordPress. My main goal is the professional growth in Web-development. </p>
 						<h3 class="mb-1 mt-1">Skills</h3>
 						<p><b class="color-b">English:</b> Intermediate level (strong B1).</p>
-						<p><b class="color-b">Languages:</b>  HTML/HTML5, CSS3/flexbox, JS, Go</p>
+						<p><b class="color-b">Languages:</b>  HTML/HTML5, CSS3/flexbox, JS, Go, SQL</p>
 						<p><b class="color-b">Preprocessors:</b> SCSS, SASS.</p>
 						<p><b class="color-b">Task runner:</b> Gulp-4.</p>
 						<p><b class="color-b">CMS:</b> WordPress.</p>
