--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="container">
 			<div class="row col-sm-6">
 				<div class="img-wrapper">
-					<img alt="my picture" class="my-pic" src="images/my-pic3.jpg">
+					<img alt="my picture" class="my-pic" src="images/my_p.jpg">
 				</div>
 				<div class="row col-md-6">
 					<div class="wrapper-nav">
@@ -25,14 +25,14 @@
 								<li class="wrapper-reference ">
 									<a class="navigation__reference git-text active" href="index.html">skills</a>
 								</li>
-								<li class="wrapper-reference "><a class="navigation__reference nav-text "
+								<!--<li class="wrapper-reference "><a class="navigation__reference nav-text "
 										href="past_exp.html">work
 								                             experience</a>
-								</li>
+								</li>-->
 								<li class="wrapper-reference dropdown ">
 									<div class="dropdown-title ">projects</div>
 									<div class="dropdown-menu">
-										<a class="dropdown-items" href="https://kvinerdji.com.ua">kvinerdji.com.ua</a>
+										<a class="dropdown-items" href="http://kvinerdji.com">kvinerdji.com</a>
 										<a class="dropdown-items" href="https://bajdaker.com.ua">bajdaker.com.ua</a>
 										<a class="dropdown-items"
 												href="https://kvinerdji-shope.top">Kvinerdji shop</a>
@@ -63,7 +63,7 @@
 		<div class="container">
 			<div class="content">
 				<h2 class="purpose">Purpose:</h2>
-				<p class="mb-2"><b class="color-b">Trainee/Junior front-end developer</b></p>
+				<p class="mb-2"><b class="color-b">Junior front-end developer</b></p>
 				<section class="section__introduction mb-2">
 					<div class="section__wrapper-content">
 						<h2 class="title-section2">Skills and Qualifications</h2>
