--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
 								<li class="wrapper-reference dropdown ">
 									<div class="dropdown-title ">projects</div>
 									<div class="dropdown-menu">
-										<a class="dropdown-items" href="http://kvinerdji.com">kvinerdji.com</a>
+										<a class="dropdown-items" href="https://kvinerdji.com">kvinerdji.com</a>
 										<a class="dropdown-items" href="https://bajdaker.com.ua">bajdaker.com.ua</a>
+										<a class="dropdown-items" href="https://peaceful-ocean-57975.herokuapp.com/">Simple site on go</a>
 										<a class="dropdown-items"
 												href="https://kvinerdji-shope.top">Kvinerdji shop</a>
 
